Added organization tab

--- a/app/gwa-calc/index.html
+++ b/app/gwa-calc/index.html
@@ -57,6 +57,15 @@
                     <a href="../exercises/" class="w3-bar-item w3-button"><i class="fa fa-keyboard-o"></i> Exercises</a>
                 </div>
             </div>
+            <div class="w3-dropdown-hover">
+                <button class="w3-button w3-padding-16">
+                    Organization <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="w3-dropdown-content w3-card-4 w3-bar-block">
+                    <a href="../../org/ustjpcs/" class="w3-bar-item w3-button"><i class="fa fa-building-o"></i> JPCS-UST</a>
+                    <a href="../../org/ustsite/" class="w3-bar-item w3-button"><i class="fa fa-building-o"></i> SITE-UST</a>
+                </div>
+            </div>
         </div>
 
         <header class="w3-container w3-theme w3-padding" id="myHeader">
