--- a/app/gwa-calc/index.html
+++ b/app/gwa-calc/index.html
@@ -36,7 +36,7 @@
     </head>
     <body>
         <div class="w3-bar w3-theme">
-            <a href="../../index.php" class="w3-bar-item w3-button w3-padding-16">Home</a>
+            <a href="../../" class="w3-bar-item w3-button w3-padding-16">Home</a>
             <div class="w3-dropdown-hover">
                 <button class="w3-button w3-padding-16">
                     Social <i class="fa fa-caret-down"></i>
