Custom GWA Calc Course Loading
Changed the buttons for the loading of the predefined courses to only have the UST-IT ALL courses config. Will add the other configs later via dropdown.

--- a/app/gwa-calc/index.html
+++ b/app/gwa-calc/index.html
@@ -186,11 +186,13 @@
                         <input class="form-control" type="text" value="" id="gwaValue" disabled>
                         <label>Weighted Average</label>
                     </div>
+                    <!--
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <input class="btn btn-basic btn-block" type="button" value="Load 3Y2T Courses (temporary feature and will be hidden upon staging)" onclick="load3ITH()">
                     </div>   
+                    -->
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <input class="btn btn-basic btn-block" type="button" value="Load ALL Courses *may take a while* (temporary feature and will be hidden upon staging)" onclick="loadAll()">
+                        <input class="btn btn-basic btn-block" type="button" value="Load ALL UST-IT Courses (may take a while)" onclick="loadAll()">
                     </div>                    
                 </div>
             </form>
