Updated social links (fixed typo)

--- a/app/snake/index.html
+++ b/app/snake/index.html
@@ -24,7 +24,7 @@
                     <a href="https://www.facebook.com/johnanthony.delpilar" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-facebook"></i> Facebook</a>
                     <a href="https://twitter.com/john_delpilar" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i> Twitter</a>
                     <a href="https://www.instagram.com/john_delpilar" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i> Instagram</a>
-                    <a href="https://www.linkedin.com/in/john-anthony-del-pilar-13394b140" target="_blank" class="w3-bar-item w3-buttom"><i class="fa fa-linkedin"></i> LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/john-anthony-del-pilar-13394b140" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i> LinkedIn</a>
                     <a href="https://github.com/johndelpilar/johndelpilar.github.io" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-github"></i> GitHub</a>
                 </div>
             </div>
