Table test on canvas

--- a/org/ustsite/index.html
+++ b/org/ustsite/index.html
@@ -21,6 +21,30 @@
 					<canvas id="demo-canvas"></canvas>
 					<h1 class="main-title"><span class="thin">Society of </span>Information Technology<span class="thin"> Enthusiasts</span></h1>
 				</div>
+				<div id="table-example">
+					<table border="1">
+						<thead>
+							<tr>
+								<th>No.</th>
+								<th>Name</th>
+								<th>Section</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>1</td>
+								<td>John</td>
+								<td>4ITH</td>
+							</tr>
+							<tr>
+								<td>2</td>
+								<td>Les</td>
+								<td>4ITD</td>
+							</tr>
+						</tbody>
+						<tfoot></tfoot>
+					</table>
+				</div>
 			</div>
 			
 		</div><!-- /container -->
