Table test on canvas

--- a/org/ustsite/index.html
+++ b/org/ustsite/index.html
@@ -18,9 +18,9 @@
 		<div class="container demo-1">
 			<div class="content">
 				<div id="large-header" class="large-header">
-					<canvas id="demo-canvas"></canvas>
+					<canvas id="demo-canvas" style="z-index: -1; position: absolute; top: 0; left: 0;"></canvas>
 					<h1 class="main-title"><span class="thin">Society of </span>Information Technology<span class="thin"> Enthusiasts</span></h1>
-					<table border="1">
+					<table border="1" style="background-color: white;">
 						<thead>
 							<tr>
 								<th>No.</th>
