--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,14 @@
-<?php
-    header("Location: ../");
-    exit();
-?>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1; url=/">
+        <script type="text/javascript">
+            window.location.href = "/"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        If you are not redirected automatically, follow this <a href='/'>link to example</a>.
+    </body>
+</html>
