--- a/app/exercises/index.html
+++ b/app/exercises/index.html
@@ -4,21 +4,26 @@
         <meta charset="UTF-8">
         <title>Page Redirection</title>
     </head>
+	<style>
+		h1 {
+			padding: 100% 0% 0% 0%;
+		}
+	</style>
     <body>
         <center>
-	    <h1><strong>!! ACCESS REQUIRED !!!</strong></h1>
-	</center>
+			<h1><strong>!! ACCESS REQUIRED !!!</strong></h1>
+		</center>
     </body>
     <script type="text/javascript">
-	var pw = prompt("Enter password", "");
-	if (!pw) {
-	    window.location.href = "/";
-	}
-	if (pw == window.location.hostname.substring(0, 12)) {	
-	    window.location.href = "nexus.html";
-	} else {
-	    alert("Incorrect! Redirecting...");
-	    window.location.href = "/";
-	}
+		var pw = prompt("Enter password", "");
+		if (!pw) {
+			window.location.href = "/";
+		}
+		if (pw == window.location.hostname.substring(0, 12)) {	
+			window.location.href = "nexus.html";
+		} else {
+			alert("Incorrect! Redirecting...");
+			window.location.href = "/";
+		}
     </script>
 </html>
