Fixed navigation links

--- a/org/4ITH/index.html
+++ b/org/4ITH/index.html
@@ -33,9 +33,9 @@
                     App <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-                    <a href="../gwa-calc/" class="w3-bar-item w3-button"><i class="fa fa-calculator"></i> GWA Calculator</a>
-                    <a href="../snake/" class="w3-bar-item w3-button"><i class="fa fa-gamepad"></i> Snake</a>
-                    <a href="../exercises/" class="w3-bar-item w3-button"><i class="fa fa-keyboard-o"></i> Exercises</a>
+                    <a href="../../app/gwa-calc/" class="w3-bar-item w3-button"><i class="fa fa-calculator"></i> GWA Calculator</a>
+                    <a href="../../app/snake/" class="w3-bar-item w3-button"><i class="fa fa-gamepad"></i> Snake</a>
+                    <a href="../../app/exercises/" class="w3-bar-item w3-button"><i class="fa fa-keyboard-o"></i> Exercises</a>
                 </div>
             </div>
             <div class="w3-dropdown-hover">
