Fixed toggleClass() targeting other fa elements

--- a/index.html
+++ b/index.html
@@ -200,10 +200,19 @@
         </script>
 	<script>
 	    $(document).ready(function() {
-		$(".fa").click(function() {
-		    $(this).toggleClass('fa-spin');
-	        });
-            });
+			$(".fa-exclamation-circle").click(function() {
+				$(this).toggleClass('fa-spin');
+			});
+			$(".fa-cubes").click(function() {
+				$(this).toggleClass('fa-spin');
+			});
+			$(".fa-hand-rock-o").click(function() {
+				$(this).toggleClass('fa-spin');
+			});
+			$(".fa-cloud").click(function() {
+				$(this).toggleClass('fa-spin');
+			});
+		});
 	</script>
 	<script>
 	    function explodeText(o) {
