--- a/phchen/pics.html
+++ b/phchen/pics.html
@@ -1,55 +1,146 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
-	<meta charset="UTF-8">
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>生日快乐！</title>
-  
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/ekko-lightbox.css">
-	
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
+    <link rel="stylesheet" href="css/fluid-gallery.css">
+
+
 </head>
-
 <body>
 
-	<div class="row justify-content-center">
-    <div class="col-md-8">
+<div class="container gallery-container">
+
+    <h1>Happy Birthday, sleepy Phash! :D</h1>
+
+    <div class="tz-gallery">
+
         <div class="row">
-            <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid">
-            </a>
-            <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                <img src="https://unsplash.it/600.jpg?image=252" class="img-fluid">
-            </a>
-            <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                <img src="https://unsplash.it/600.jpg?image=253" class="img-fluid">
-            </a>
+
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/1.jpg">
+                    <img src="./img/1.jpg" alt="1">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/2.jpg">
+                    <img src="./img/2.jpg" alt="2">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/6.jpg">
+                    <img src="./img/6.jpg" alt="6">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/3.jpg">
+                    <img src="./img/3.jpg" alt="3">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/4.jpg">
+                    <img src="./img/4.jpg" alt="4">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/5.jpg">
+                    <img src="./img/5.jpg" alt="5">
+                </a>
+            </div> 
+
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/7.jpg">
+                    <img src="./img/7.jpg" alt="7">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/8.jpg">
+                    <img src="./img/8.jpg" alt="8">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/9.jpg">
+                    <img src="./img/9.jpg" alt="9">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/10.jpg">
+                    <img src="./img/10.jpg" alt="10">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/14.jpg">
+                    <img src="./img/14.jpg" alt="14">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/17.jpg">
+                    <img src="./img/17.jpg" alt="17">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/11.jpg">
+                    <img src="./img/11.jpg" alt="11">
+                </a>
+            </div> 
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/12.jpg">
+                    <img src="./img/12.jpg" alt="12">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/13.jpg">
+                    <img src="./img/13.jpg" alt="13">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/15.jpg">
+                    <img src="./img/15.jpg" alt="15">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/16.jpg">
+                    <img src="./img/16.jpg" alt="16">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/18.jpg">
+                    <img src="./img/18.jpg" alt="18">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/19.jpg">
+                    <img src="./img/19.jpg" alt="19">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/20.jpg">
+                    <img src="./img/20.jpg" alt="20">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="./img/21.jpg">
+                    <img src="./img/21.jpg" alt="21">
+                </a>
+            </div>
+
         </div>
-        <div class="row">
-            <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                <img src="https://unsplash.it/600.jpg?image=254" class="img-fluid">
-            </a>
-            <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                <img src="https://unsplash.it/600.jpg?image=255" class="img-fluid">
-            </a>
-            <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-                <img src="https://unsplash.it/600.jpg?image=256" class="img-fluid">
-            </a>
-        </div>
+
     </div>
+
 </div>
 
-
-	<script src="js/ekko-lightbox.js"></script>
-	<script src="js/jquery-latest.min.js"></script>
-	
-	<script>
-		$(document).on('click', '[data-toggle="lightbox"]', function(event) {
-			event.preventDefault();
-			$(this).ekkoLightbox();
-		});
-	</script>
-	
+<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
+<script>
+    baguetteBox.run('.tz-gallery');
+</script>
 </body>
 </html>
