modified 4Y1T jQuery loading file

--- a/app/gwa-calc/form-table-body-4ith-1st-term.html
+++ b/app/gwa-calc/form-table-body-4ith-1st-term.html
@@ -7,7 +7,7 @@
     <body>
         <tbody>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="APP" disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="ICS 115" disabled></td>
                 <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
                 <td align='center' style='min-width: 92px;'> 
                     <select class='form-control' id='grade[]' name='grade[]' required>
@@ -26,8 +26,8 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="ICS 114" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='4' min='1' max='99' disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="ICS 125" disabled></td>
+                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
                 <td align='center' style='min-width: 92px;'> 
                     <select class='form-control' id='grade[]' name='grade[]' required>
                         <option>1.00</option>
@@ -45,7 +45,7 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="ICS 124" disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT 282" disabled></td>
                 <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='4' min='1' max='99' disabled></td>
                 <td align='center' style='min-width: 92px;'> 
                     <select class='form-control' id='grade[]' name='grade[]' required>
@@ -64,7 +64,7 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>	
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="ICS 133" disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT 205" disabled></td>
                 <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
                 <td align='center' style='min-width: 92px;'> 
                     <select class='form-control' id='grade[]' name='grade[]' required>
@@ -83,7 +83,7 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT 204" disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT 291" disabled></td>
                 <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='2' min='1' max='99' disabled></td>
                 <td align='center' style='min-width: 92px;'> 
                     <select class='form-control' id='grade[]' name='grade[]' required>
@@ -102,26 +102,7 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT 204L" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='1' min='1' max='99' disabled></td>
-                <td align='center' style='min-width: 92px;'> 
-                    <select class='form-control' id='grade[]' name='grade[]' required>
-                        <option>1.00</option>
-                        <option>1.25</option>
-                        <option>1.50</option>
-                        <option>1.75</option>
-                        <option>2.00</option>
-                        <option>2.25</option>
-                        <option>2.50</option>
-                        <option>2.75</option>
-                        <option>3.00</option>
-                        <option>5.00</option>
-                    </select>
-                </td>
-                <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
-            </tr>
-            <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT-ELEC1C" disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT-ELEC2" disabled></td>
                 <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
                 <td align='center' style='min-width: 92px;'> 
                     <select class='form-control' id='grade[]' name='grade[]' required>
@@ -140,7 +121,7 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="SCL 3" disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="SCL 9" disabled></td>
                 <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
                 <td align='center' style='min-width: 92px;'> 
                     <select class='form-control' id='grade[]' name='grade[]' required>
