--- a/app/gwa-calc/index.html
+++ b/app/gwa-calc/index.html
@@ -241,9 +241,9 @@
             }
 
             function load3ITH() {
-                //if (confirm("Load 3ITH courses?")) {
+                //if (confirm("Load 4IT 1T courses?")) {
                 $('tr').remove('.field');
-                $('<tbody></tbody>').load('form-table-body-3ith.html', function() {
+                $('<tbody></tbody>').load('form-table-body-4ith-1st-term.html', function() {
                     $('#form-grade-input-table').append($(this));
                 });
                 //}
