--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                     <a href="org/ustsite/" class="w3-bar-item w3-button"><i class="fa fa-building-o"></i> SITE-UST</a>
                 </div>
             </div>
+            <div class="w3-dropdown-hover">
+                <button class="w3-button w3-padding-16">
+                    Ask me! <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="w3-dropdown-content w3-card-4 w3-bar-block">
+                    <a href="https://curiouscat.me/john_delpilar" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-question-circle"></i> CuriousCat</a>
+                    <a href="https://ask.fm/john_delpilar" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-question-circle-o"></i> ASKfm</a>
+                </div>
+            </div>
         </div>
 
         <header class="w3-container w3-theme w3-padding" id="myHeader">
