added gtags to all indices

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,16 @@
             window.location.href = "/"
         </script>
         <title>Page Redirection</title>
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115454176-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-115454176-1');
+        </script>
     </head>
     <body>
         If you are not redirected automatically, follow this <a href='/'>link to example</a>.
