--- a/phchen/index.html
+++ b/phchen/index.html
@@ -12,6 +12,16 @@
 	<link rel="stylesheet" href="css/style1.css">
 
 	<meta http-equiv="refresh" content="10;url=pics.html" />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115454176-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-115454176-1');
+	</script>
 </head>
 
 <body>
