--- a/app/exercises/index.html
+++ b/app/exercises/index.html
@@ -3,6 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Page Redirection</title>
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115454176-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-115454176-1');
+        </script>
     </head>
 	<style>
 		h1 {
