--- a/app/gwa-calc/index.html
+++ b/app/gwa-calc/index.html
@@ -33,6 +33,16 @@
                 color: dimgray;
             }
         </style>
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115454176-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-115454176-1');
+        </script>
     </head>
     <body>
         <div class="w3-bar w3-theme">
