--- a/app/snake/index.html
+++ b/app/snake/index.html
@@ -12,6 +12,16 @@
         <link rel="stylesheet" href="../../css/bootstrap.min.css">
         <script src="../../js/script.js"></script>
         <script src="../../js/jquery-latest.min.js"></script>
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115454176-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-115454176-1');
+        </script>
     </head>
     <body>
         <div class="w3-bar w3-theme">
