--- a/org/ustjpcs/index.html
+++ b/org/ustjpcs/index.html
@@ -26,6 +26,16 @@
         <link href="//fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
         <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
         <!-- //web-fonts -->
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115454176-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-115454176-1');
+        </script>
     </head>
     <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"> 
         <!-- banner -->
