--- a/app/gwa-calc/index.html
+++ b/app/gwa-calc/index.html
@@ -202,7 +202,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <input class="btn btn-basic btn-block" type="button" value="Load IT 4Y1T Courses (temp)" onclick="loadSpecific()">
+                        <input class="btn btn-basic btn-block" type="button" value="Load IT 4Y2T Courses" onclick="loadSpecific()">
                     </div>
 
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -256,7 +256,7 @@
             function loadSpecific() {
                 //if (confirm("Load 4IT 1T courses?")) {
                 $('.field').remove();
-                $('<tbody></tbody>').load('form-table-body-4ith-1st-term.html', function() {
+                $('<tbody></tbody>').load('form-table-body-4ith-2nd-term.html', function() {
                     $('#form-grade-input-table').append($(this));
                 });
                 //}
