updated certification list (cv)

--- a/cv/index.html
+++ b/cv/index.html
@@ -133,6 +133,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>
             <h6 class="w3-text-teal"><i class="fa fa-check-square fa-fw w3-margin-right"></i>Certifications</h6>
             <ul>
+              <li><b>PhilNITS Information Technology Passport (IP) Certification</b>, PhilNITS - ITPEC, National University, 2018</li>
               <li><b>IBM DB2 Academic Associate: DB2 Database and Application Fundamentals</b>, IBM, University of Santo Tomas, 2015</li>
             </ul>
           </p>
