--- a/app/gwa-calc/form-table-body-4ith-2nd-term.html
+++ b/app/gwa-calc/form-table-body-4ith-2nd-term.html
@@ -7,8 +7,8 @@
     <body>
         <tbody>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="PGC" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="PGC"></td>
+                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99'></td>
                 <td align='center' style='min-width: 92px;'>
                     <select class='form-control' id='grade[]' name='grade[]' required>
                         <option>1.00</option>
@@ -26,8 +26,8 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="PHIST" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="PHIST"></td>
+                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99'></td>
                 <td align='center' style='min-width: 92px;'>
                     <select class='form-control' id='grade[]' name='grade[]' required>
                         <option>1.00</option>
@@ -45,8 +45,8 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="ICS 299" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='1' min='1' max='99' disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="ICS 299"></td>
+                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='1' min='1' max='99'></td>
                 <td align='center' style='min-width: 92px;'>
                     <select class='form-control' id='grade[]' name='grade[]' required>
                         <option>1.00</option>
@@ -64,8 +64,8 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="F-ELEC2" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="F-ELEC2"></td>
+                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99'></td>
                 <td align='center' style='min-width: 92px;'>
                     <select class='form-control' id='grade[]' name='grade[]' required>
                         <option>1.00</option>
@@ -83,8 +83,8 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="F-ELEC3" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="F-ELEC3"></td>
+                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99'></td>
                 <td align='center' style='min-width: 92px;'>
                     <select class='form-control' id='grade[]' name='grade[]' required>
                         <option>1.00</option>
@@ -102,8 +102,8 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT-ELEC3" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT-ELEC3"></td>
+                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99'></td>
                 <td align='center' style='min-width: 92px;'>
                     <select class='form-control' id='grade[]' name='grade[]' required>
                         <option>1.00</option>
@@ -121,8 +121,8 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT-ELEC4" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99' disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT-ELEC4"></td>
+                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='3' min='1' max='99'></td>
                 <td align='center' style='min-width: 92px;'>
                     <select class='form-control' id='grade[]' name='grade[]' required>
                         <option>1.00</option>
@@ -140,8 +140,8 @@
                 <td><i class='fa fa-trash-o' style='font-size: xx-large;' onclick='$(this).closest("tr").remove();'></i></td>
             </tr>
             <tr class='field'>
-                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT 292" disabled></td>
-                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='2' min='1' max='99' disabled></td>
+                <td><input class='form-control' type='text' id='code[]' name='code[]' pattern='.{1,20}' value="IT 292"></td>
+                <td><input class='form-control' type='number' id='unit[]' name='unit[]' required value='2' min='1' max='99'></td>
                 <td align='center' style='min-width: 92px;'>
                     <select class='form-control' id='grade[]' name='grade[]' required>
                         <option>1.00</option>
