--- a/cv/index.html
+++ b/cv/index.html
@@ -140,7 +140,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>
             <h6 class="w3-text-teal"><i class="fa fa-trophy fa-fw w3-margin-right"></i>Achievements</h6>
             <ul>
-              <li>Candidate for Latin Honors, Cum Laude (Current Running GWA, 1.540)</li>
+              <li>Latin Honors, <b>Cum Laude</b> (GWA: 1.521)</li>
+              <li><b>Dean’s Lister – (1.369)</b>, UST-IICS, España, Manila, 2nd Term AY 2017-18</li>
               <li><b>Best Thesis – 3rd place</b>, UST-IICS, España, Manila, 2nd Term AY 2017-18, <i>iComPAsS: An Enhanced Web Application for Assessment of Cancer and Postoperative Patients</i></li>
               <li><b>Dean’s Lister – (1.393) 3rd place</b>, UST-IICS, España, Manila, 1st Term AY 2017-18</li>
               <li><b>Dean’s Lister – (1.533) 7th place</b>, UST-IICS, España, Manila, 2nd Term AY 2016-17</li>
