--- a/cv/index.html
+++ b/cv/index.html
@@ -40,7 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Developer</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Associate Mapping Developer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Manila, PH</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="mailto:johnanthony.delpilar@gmail.com" target="_blank">johnanthony.delpilar@gmail.com</a></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+63 917 670 1024</p>
@@ -97,6 +97,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
+          <h5 class="w3-opacity"><b>Associate Mapping Developer / OpenText, Inc.</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Electronic Data Interchange</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2018 - present</h6>
+          <p>
+
+          </p>
+          <hr>
+        </div>
+          <div class="w3-container">
           <h5 class="w3-opacity"><b>On-The-Job Trainee / Accenture, Inc.</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Digital Data Analytics</h6>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - Nov 2017</h6>
