--- a/cv/index.html
+++ b/cv/index.html
@@ -105,17 +105,36 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </p>
           <hr>
         </div>
-          <div class="w3-container">
-          <h5 class="w3-opacity"><b>On-The-Job Trainee / Accenture, Inc.</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Digital Data Analytics</h6>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - Nov 2017</h6>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Freelance Web Developer</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Back-end Development</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2018 - present</h6>
           <p>
-
+            <ul>
+              <li>
+                <b><i>(ongoing)</i> Barcoded Document Management System</b>
+                University of Santo Tomas - Office of the Rector
+              </li>
+              <li>Back-end technologies utilized:
+                <ul>
+                  <li>Spring 5.0.7</li>
+                  <li>Spring Data JPA</li>
+                  <li>Spring HATEOAS</li>
+                  <li>RESTful Web Services</li>
+                  <li></li>
+                </ul>
+              </li>
+            </ul>
           </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>On-The-Job Trainee / Accenture, Inc.</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Digital Data Analytics</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - Nov 2017</h6>
+          <p>
+  
+          </p>
           <h6 class="w3-text-teal"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>SAP Application Management Support</h6>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2017 - Aug 2017</h6>
           <p>
@@ -150,7 +169,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-text-teal"><i class="fa fa-trophy fa-fw w3-margin-right"></i>Achievements</h6>
             <ul>
               <li>Latin Honors, <b>Cum Laude</b> (GWA: 1.521)</li>
-              <li><b>Dean’s Lister – (1.369)</b>, UST-IICS, España, Manila, 2nd Term AY 2017-18</li>
+              <li><b>Dean’s Lister – (1.369) 10th place</b>, UST-IICS, España, Manila, 2nd Term AY 2017-18</li>
               <li><b>Best Thesis – 3rd place</b>, UST-IICS, España, Manila, 2nd Term AY 2017-18, <i>iComPAsS: An Enhanced Web Application for Assessment of Cancer and Postoperative Patients</i></li>
               <li><b>Dean’s Lister – (1.393) 3rd place</b>, UST-IICS, España, Manila, 1st Term AY 2017-18</li>
               <li><b>Dean’s Lister – (1.533) 7th place</b>, UST-IICS, España, Manila, 2nd Term AY 2016-17</li>
